# TACO-RESEARCH

./: .gitignore  README.md  README_CN.md
figures/: ascii_architecture.txt
opencode-tui/: .gitignore  README.md  pyproject.toml
opencode-tui/.opencode/: opencode.jsonc
opencode-tui/.opencode/agent/: academic-editor.md  citation-auditor.md  code-engineer.md  literature-researcher.md  methodologist.md  visualization-designer.md
opencode-tui/.opencode/command/: phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md
opencode-tui/.opencode/skills/pipeline/: SKILL.md
opencode-tui/academic_mcp/: academic_server.py
opencode-tui/src/opencode_tui/: __init__.py  app.py  css.py  events.py  theme.py
opencode-tui/src/opencode_tui/backend/: __init__.py  base.py  opencode_backend.py  redis_backend.py
opencode-tui/src/opencode_tui/client/: __init__.py  http.py  sse.py
opencode-tui/src/opencode_tui/widgets/: __init__.py  agent_activity.py  chat.py  cost_budget.py  gate_status.py  message.py  phase_ring.py  prompt.py  sidebar.py  spinner.py
opencode-tui/tests/: test_client.py  test_widgets.py
redis-memory/: P2_P3_P4_P5_PLAN.md  P2_P5_REQUIREMENTS.md  PAPER_PLAN.md  __init__.py.bak  _review_round.py  academic_errors.py  academic_loop.py  adversarial_test_generator.py  agent_memory.py  agent_roster.py  analytics_engine.py  analyze_failure.py  audit_logger.py  auto_retry.py  autonomous_orchestrator.py  cache_strategy.py  checkpoint_manager.py  complexity_router.py  cost_ledger.py  event_system.py  expand_adversarial_tests.py  expand_fault_catalog.py  (+44 more)
(+65 files in other folders)
